--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,117 @@
-/*** Général ***/
+/*** GOOGLE FONTS ***/
+
+@font-face {
+    font-family: 'Space Mono';
+    src: url('assets/fonts/space_mono/SpaceMono-BoldItalic.woff2') format("woff2");
+    font-style: bolditalic;
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Space Mono';
+    src: url('assets/fonts/space_mono/SpaceMono-Regular.woff2') format("woff2");
+    font-style: regular;
+    font-weight: 400;
+}
+
+
+/*** GENERAL ***/
+
 * {
     font-family: 'Space Mono', sans-serif;
 }
 
+body {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+}
 
-/*** Header ***/
+#page {
+    width: 100%;
+    height: auto;
+}
+
+
+/*** HEADER ***/
+
+header {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    width:216px;
+    height: 14px;
+}
+
+.header-site-menu {
+    width: 200px;
+    display: flex;
+}
+
+#menu-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 50px;
+    width: 400px;
+    font-size: 16px;
+    padding-left: 0px;
+}
+
+#menu-header li {
+    list-style-type: none;
+}
+
+#menu-header li a {
+    text-decoration: none;
+    color: black;
+}
+
+.current-menu-item a {
+    font-weight: bold;
+}
+
+/*** FOOTER ***/
+
+.footer_site_menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    border-top: 1px black solid;
+}
+
+#menu-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 90px;
+    font-size: 16px;
+    padding-left: 0px;
+}
+
+#menu-footer li {
+    list-style-type: none;
+}
+
+#menu-footer li a {
+    text-decoration: none;
+    color: black;
+}
