--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -34,6 +34,10 @@ body {
     height: auto;
 }
 
+.current-menu-item a {
+    font-weight: bold;
+}
+
 
 /*** HEADER ***/
 
@@ -57,6 +61,10 @@ header {
             width: 200px;
             display: flex;
         }
+        #icons {
+            cursor: pointer;
+            display: none;
+        }
     }
 }
 
@@ -70,6 +78,9 @@ header {
     padding-left: 0px;
     > li {
         list-style-type: none;
+        :hover {
+            font-weight: bold;
+        }
         > a {
             text-decoration: none;
             color: black;
@@ -77,8 +88,13 @@ header {
     }
 }
 
-.current-menu-item a {
-    font-weight: bold;
+@media (max-width: 650px) {
+    #icons {
+        display: block;
+    }
+    #icons:before {
+        background-image: url('assets/images/burger_menu.png');
+    }
 }
 
 /*** FOOTER ***/
@@ -102,6 +118,9 @@ header {
     padding-left: 0px;
     > li {
         list-style-type: none;
+        :hover {
+            font-weight: bold;
+        }
         > a {
             text-decoration: none;
             color: black;
