--- a/sass/theme.css
+++ b/sass/theme.css
@@ -149,8 +149,9 @@ header .navbar #closeBtn {
 #menu-footer {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  gap: 90px;
+  justify-content: center;
+  width: 100%;
+  gap: 6%;
   font-size: 16px;
   padding-left: 0px;
 }
@@ -170,9 +171,15 @@ header .navbar #closeBtn {
     font-size: calc(0.3rem + 1.4vw);
   }
 }
-@media (max-width: 380px) {
-  .footer_site_menu {
+@media (max-width: 375px) {
+  #menu-footer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    font-size: 16px;
+    padding-top: 160px;
+  }
+  #menu-footer > li {
+    padding-bottom: 25px;
   }
 }/*# sourceMappingURL=theme.css.map */
