--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -174,8 +174,9 @@ header {
 #menu-footer {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    gap: 90px;
+    justify-content: center;
+    width: 100%;
+    gap: 6%;
     font-size: 16px;
     padding-left: 0px;
     > li {
@@ -196,9 +197,15 @@ header {
     }
 }
 
-@media (max-width: 380px) {
-    .footer_site_menu {
+@media (max-width: 375px) {
+    #menu-footer {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        font-size: 16px;
+        padding-top: 160px;
+        > li {
+            padding-bottom: 25px;
+        }
     }
 }
