--- a/sass/theme.css
+++ b/sass/theme.css
@@ -70,7 +70,6 @@ header .navbar #closeBtn {
   flex-direction: row;
   justify-content: flex-end;
   gap: 50px;
-  width: 400px;
   font-size: 16px;
   padding-left: 0px;
 }
@@ -124,15 +123,31 @@ header .navbar #closeBtn {
   }
   .header-site-menu.active {
     display: block;
-    background-color: #E00000;
-    transition: top 0.8s ease;
-    position: absolute;
+  }
+  #closeBtn {
+    display: none;
   }
   .header-site-menu.active ~ #closeBtn {
     display: block;
   }
   .header-site-menu.active ~ #openBtn {
     display: none;
+  }
+  #menu-header {
+    display: flex;
+    position: fixed;
+    top: 60px;
+    width: 100%;
+    height: 80vh;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #E00000;
+    font-size: 44px;
+  }
+  #menu-header > li > a {
+    color: white;
   }
 }
 /*** FOOTER ***/
