--- a/sass/theme.css
+++ b/sass/theme.css
@@ -1,6 +1,6 @@
 /*** GOOGLE FONTS ***/
 @font-face {
-  font-family: "Space Mono";
+  font-family: "Space Mono BoldItalic";
   src: url("../assets/fonts/space_mono/SpaceMono-BoldItalic.woff2") format("woff2");
   font-style: bolditalic;
   font-weight: 700;
@@ -10,6 +10,12 @@
   src: url("../assets/fonts/space_mono/SpaceMono-Regular.woff2") format("woff2");
   font-style: regular;
   font-weight: 400;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../assets/fonts/poppins/Poppins-Light.woff2") format("woff2");
+  font-style: light;
+  font-weight: 300;
 }
 /*** GENERAL ***/
 * {
@@ -53,7 +59,7 @@ header .navbar .logo img {
   height: 14px;
 }
 header .navbar .header-site-menu {
-  width: 200px;
+  width: 100vw;
   display: flex;
 }
 header .navbar #openBtn,
@@ -69,6 +75,7 @@ header .navbar #closeBtn {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  width: 100%;
   gap: 50px;
   font-size: 16px;
   padding-left: 0px;
@@ -86,11 +93,7 @@ header .navbar #closeBtn {
 
 @media (max-width: 700px) {
   #menu-header {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 60px;
-    width: 100px;
+    gap: 30px;
     font-size: calc(0.5rem + 1.5vw);
   }
   header .navbar .logo img {
@@ -98,7 +101,18 @@ header .navbar #closeBtn {
     height: 13px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+  #menu-header {
+    gap: 20px;
+  }
+}
+@media (max-width: 550px) {
+  #menu-header {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    font-size: calc(0.5rem + 1.5vw);
+  }
   header .navbar .logo img {
     width: 184px;
     height: 12px;
@@ -197,4 +211,37 @@ header .navbar #closeBtn {
   #menu-footer > li {
     padding-bottom: 25px;
   }
+}
+/*** BANNER ***/
+.banner {
+  position: relative;
+  width: 100%;
+  height: 962px;
+  overflow: hidden;
+}
+.banner .background_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
+}
+.banner h1 {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Space Mono BoldItalic";
+  font-size: 96px;
+  text-align: center;
+  line-height: 1;
+  text-transform: uppercase;
+  z-index: 1;
+  margin: 0;
+  -webkit-text-stroke: 2px white;
+  color: transparent;
 }/*# sourceMappingURL=theme.css.map */
