--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -1,7 +1,7 @@
 /*** GOOGLE FONTS ***/
 
 @font-face {
-    font-family: 'Space Mono';
+    font-family: 'Space Mono BoldItalic';
     src: url('../assets/fonts/space_mono/SpaceMono-BoldItalic.woff2') format("woff2");
     font-style: bolditalic;
     font-weight: 700;
@@ -12,6 +12,13 @@
     src: url('../assets/fonts/space_mono/SpaceMono-Regular.woff2') format("woff2");
     font-style: regular;
     font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../assets/fonts/poppins/Poppins-Light.woff2') format("woff2");
+    font-style: light;
+    font-weight: 300;
 }
 
 
@@ -54,11 +61,11 @@ header {
         justify-content: space-between;
         align-items: center;
         .logo img {
-            width:216px;
+            width: 216px;
             height: 14px;
         }
         .header-site-menu {
-            width: 200px;
+            width: 100vw;
             display: flex;
         }
         #openBtn,
@@ -76,6 +83,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    width: 100%;
     gap: 50px;
     font-size: 16px;
     padding-left: 0px;
@@ -93,13 +101,9 @@ header {
 
 @media (max-width: 700px) {
     #menu-header {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 60px;
-    width: 100px;
-    font-size: calc(0.5rem + 1.5vw);
-    }
+        gap: 30px;
+        font-size: calc(0.5rem + 1.5vw);
+        }
 
     header .navbar {
         .logo img {
@@ -109,7 +113,20 @@ header {
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+    #menu-header {
+        gap: 20px;
+        }
+}
+
+@media (max-width: 550px) {
+    #menu-header {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+        font-size: calc(0.5rem + 1.5vw);
+        }
+
     header .navbar {
         .logo img {
             width:184px;
@@ -223,5 +240,39 @@ header {
         > li {
             padding-bottom: 25px;
         }
+    }
+}
+
+
+/*** BANNER ***/
+.banner {
+    position: relative;
+    width: 100%;
+    height: 962px;
+    overflow: hidden;
+    .background_img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+    }
+    h1 {
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: 'Space Mono BoldItalic';
+        font-size: 96px;
+        text-align: center;
+        line-height: 1;
+        text-transform: uppercase;
+        z-index: 1;
+        margin: 0;
+        -webkit-text-stroke: 2px white;
+        color: transparent;
     }
 }
