--- a/sass/theme.css
+++ b/sass/theme.css
@@ -106,7 +106,7 @@ header .navbar #closeBtn {
     gap: 20px;
   }
 }
-@media (max-width: 550px) {
+@media (max-width: 560px) {
   #menu-header {
     display: flex;
     flex-direction: column;
@@ -244,4 +244,87 @@ header .navbar #closeBtn {
   margin: 0;
   -webkit-text-stroke: 2px white;
   color: transparent;
+}
+
+@media (max-width: 1000px) {
+  .banner h1 {
+    font-size: 90px;
+  }
+}
+@media (max-width: 970px) {
+  .banner h1 {
+    font-size: 86px;
+  }
+}
+@media (max-width: 900px) {
+  .banner h1 {
+    font-size: 80px;
+  }
+}
+@media (max-width: 850px) {
+  .banner h1 {
+    font-size: 70px;
+    -webkit-text-stroke: 1.5px white;
+  }
+}
+@media (max-width: 750px) {
+  .banner h1 {
+    font-size: 60px;
+  }
+}
+@media (max-width: 650px) {
+  .banner h1 {
+    font-size: 50px;
+    -webkit-text-stroke: 1px white;
+  }
+}
+@media (max-width: 550px) {
+  .banner h1 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 450px) {
+  .banner h1 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 400px) {
+  .banner h1 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 375px) {
+  .banner h1 {
+    font-size: 28px;
+  }
+}
+/*** MODALE CONTACT ***/
+.modale-overlay {
+  display: none;
+}
+.modale-overlay .modale {
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid black;
+  width: 80%;
+}
+
+.modale-overlay.open {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 600px;
+  height: 770px;
+  overflow: auto;
+  background-color: white;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }/*# sourceMappingURL=theme.css.map */
