--- a/sass/theme.css
+++ b/sass/theme.css
@@ -150,6 +150,7 @@ header .navbar #closeBtn {
   #menu-header {
     display: flex;
     position: fixed;
+    z-index: 2;
     top: 60px;
     width: 100%;
     height: 80vh;
@@ -314,9 +315,20 @@ header .navbar #closeBtn {
   background-color: white;
   border: 5px solid black;
 }
-.modale-overlay .img_contact_modale {
+.modale-overlay .modale-header {
+  position: relative;
+}
+.modale-overlay .modale-header .closeBtn {
+  position: absolute;
+  top: 4%;
+  right: -20%;
+  font-size: 20px;
+  cursor: pointer;
+}
+.modale-overlay .modale-header .img_contact_modale {
   height: 106px;
   width: 100%;
+  padding-top: 12px;
 }
 .modale-overlay .modale {
   padding: 20px;
@@ -327,14 +339,7 @@ header .navbar #closeBtn {
 
 .modale-overlay.open {
   display: block;
-}
-
-.closeBtn {
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  font-size: 20px;
+  z-index: 3;
 }
 
 .wpcf7 {
