--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -356,26 +356,38 @@ header {
     overflow-y: auto;
     background-color: white;
     border: 5px solid black;
-    .modale-header {
+    .modale-global {
         position: relative;
-        .closeBtn {
-            position: absolute;
-            top: 4%;
-            right: -20%;
-            font-size: 20px;
-            cursor: pointer;
+        width: 100%;
+        display: inline-block;
+        .modale-header {
+            position: relative;
+            .closeBtn {
+                position: absolute;
+                right: 0px;
+                border-radius:20px;
+                height:20px;
+                width:20px;
+                border:1px solid black;
+                background:white;
+                cursor:pointer;
+                display:flex;
+                justify-content:center;
+                align-items:center;
+                transition:all 0.4s ease;
+            }
+            .img_contact_modale {
+                height: 106px;
+                width: 100%;
+                padding-top: 12px;
+            }
         }
-        .img_contact_modale {
-            height: 106px;
-            width: 100%;
-            padding-top: 12px;
+        .modale {
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-    }
-    .modale {
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 }
 
