--- a/sass/theme.css
+++ b/sass/theme.css
@@ -95,7 +95,7 @@ header .navbar #closeBtn {
 @media (max-width: 700px) {
   #menu-header {
     gap: 30px;
-    font-size: calc(0.5rem + 1.5vw);
+    font-size: calc(0.5rem + 1vw);
   }
   header .navbar .logo img {
     width: 200px;
@@ -109,20 +109,47 @@ header .navbar #closeBtn {
 }
 @media (max-width: 560px) {
   #menu-header {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-    font-size: calc(0.5rem + 1.5vw);
+    gap: 16px;
   }
   header .navbar .logo img {
     width: 184px;
     height: 12px;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 500px) {
+  #menu-header {
+    gap: 12px;
+  }
   header .navbar .logo img {
     width: 168px;
     height: 11px;
+  }
+}
+@media (max-width: 470px) {
+  #menu-header {
+    gap: 11px;
+  }
+  header .navbar .logo img {
+    width: 152px;
+    height: 11px;
+  }
+}
+@media (max-width: 430px) {
+  #menu-header {
+    gap: 8px;
+  }
+  header .navbar .logo img {
+    width: 138px;
+    height: 10px;
+  }
+}
+@media (max-width: 390px) {
+  #menu-header {
+    gap: 6px;
+  }
+  header .navbar .logo img {
+    width: 138px;
+    height: 9px;
   }
 }
 @media (max-width: 375px) {
