--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -515,4 +515,31 @@ header {
 }
 
 
+/*** SINGLE-PHOTOS ***/
+.single-photos {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    .single-photos-part-one {
+        height: 63%;
+        display: flex;
+        flex-direction: column;
+        .photo-details {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            .photo-meta {
+                width: 50%;
+            }
+            .photo-image {
+                width: 50%;
+            }
+        }
+    }
+    .single-photos-part-two {
+        height: 33%;
+        display: flex;
+    }
+}
 
