--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -69,7 +69,7 @@ header {
     .navbar {
         display: flex;
         flex-direction: row;
-        width: 85%;
+        width: 90%;
         justify-content: space-between;
         align-items: center;
         .logo img {
@@ -517,29 +517,143 @@ header {
 
 /*** SINGLE-PHOTOS ***/
 .single-photos {
-    width: 100vw;
-    height: 100vh;
+    width: 90vw;
+    max-width: 1440px;
+    margin: 0 auto;
+    height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 100px;
     .single-photos-part-one {
-        height: 63%;
+        width: 100%;
+        height: auto;
         display: flex;
-        flex-direction: column;
-        .photo-details {
-            width: 100%;
-            display: flex;
-            flex-direction: row;
+        flex-direction: row;
+        justify-content: center;
+        gap: 2%;
             .photo-meta {
-                width: 50%;
+                width: 47%;
+                display: flex;
+                flex-direction: column;
+                padding-top: 390px;
+                border-bottom: 1px solid black;
+                h2 {
+                    font-size: 66px;
+                    font-style: italic;
+                    font-weight: 400;
+                    line-height: 58px;
+                    align-items: center;
+                    text-transform: uppercase;
+                    margin-bottom: 20px;
+                }
+                p {
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 21px;
+                    align-items: center;
+                    text-transform: uppercase;
+                    margin-bottom: 12px;
+                }
             }
             .photo-image {
-                width: 50%;
+                flex: 1;
+                img {
+                    width: 100%;
+                    max-width: 100%;
+                    height: 844px;
+                    object-fit: cover;
+                }
+            }
+        }
+    .single-photos-part-two {
+        width: 90vw;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding: 10px 0px 10px 0px;
+        border-bottom: 1px solid black;
+        .single-photos-contact-button {
+            width: 42vw;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            p {
+                font-family: 'Poppins';
+                font-style: normal;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 21px;
+                margin: 0;
+            } 
+            button {
+                width: 17vw;
+                height: 50px;
+                border-radius: 4px; 
+                border: none;
+                cursor: pointer;
+                transition: background-color 0.3s color 0.3s;
+                &:hover {
+                    background-color: #000000;
+                    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
+                    color: white;
+                }
+            }
+        }
+        .single-contact-photo {
+            width: auto;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin-left: auto;
+            .thumbnail-photo img {
+                width: 81px;
+                height: 71px;
+                object-fit: cover;
+            }
+            .arrows {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                cursor: pointer;
+                :hover {
+                    font-weight: bold;
+                }
+                img {
+                    margin: 0 10px;
+                }
             }
         }
     }
-    .single-photos-part-two {
-        height: 33%;
+    .single-photos-part-three {
+        width: 90vw;
+        height: auto;
         display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        p {
+            font-size: 18px;
+            line-height: 27px;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            padding: 40px 0px 40px 0px;
+        }
+        .photos-apparentees {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 500px;
+            gap: 2%;
+            img {
+                width: 50%;
+                height: auto;
+                object-fit: cover;
+            }
+        }
     }
 }
-
