--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -43,9 +43,16 @@ $ddd : #E5E5E5;
 body {
     width: 100%;
     height: auto;
-    display: flex;
-    justify-content: center;
     margin: 0px;
+}
+
+#wpadminbar {
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 #page {
@@ -300,7 +307,7 @@ header {
 /*** BANNER ***/
 .banner {
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 962px;
     overflow: hidden;
     .background_img {
@@ -487,6 +494,9 @@ header {
             height: 50px;
             width: 100%;
             max-width: 340px !important;
+            cursor: pointer;
+            border: none;
+            transition: background-color 0.3s, color 0.3s;
         }
         .wpcf7-submit:hover {
             background-color: #000000;
@@ -517,7 +527,7 @@ header {
 
 /*** SINGLE-PHOTOS ***/
 .single-photos {
-    width: 90vw;
+    width: 100vw;
     max-width: 1440px;
     margin: 0 auto;
     height: auto;
@@ -533,31 +543,16 @@ header {
         justify-content: center;
         gap: 2%;
             .photo-meta {
-                width: 47%;
+                width: 50%;
+                order: 1;
                 display: flex;
                 flex-direction: column;
                 padding-top: 390px;
                 border-bottom: 1px solid black;
-                h2 {
-                    font-size: 66px;
-                    font-style: italic;
-                    font-weight: 400;
-                    line-height: 58px;
-                    align-items: center;
-                    text-transform: uppercase;
-                    margin-bottom: 20px;
-                }
-                p {
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 21px;
-                    align-items: center;
-                    text-transform: uppercase;
-                    margin-bottom: 12px;
-                }
             }
             .photo-image {
-                flex: 1;
+                width: 50%;
+                order: 2;
                 img {
                     width: 100%;
                     max-width: 100%;
@@ -567,17 +562,16 @@ header {
             }
         }
     .single-photos-part-two {
-        width: 90vw;
-        height: auto;
+        width: 100%;
+        height: 118px;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         margin: 0 auto;
-        padding: 10px 0px 10px 0px;
         border-bottom: 1px solid black;
         .single-photos-contact-button {
-            width: 42vw;
+            width: 50%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -594,9 +588,10 @@ header {
                 width: 17vw;
                 height: 50px;
                 border-radius: 4px; 
+                background-color: $button-background-color;
                 border: none;
                 cursor: pointer;
-                transition: background-color 0.3s color 0.3s;
+                transition: background-color 0.3s, color 0.3s;
                 &:hover {
                     background-color: #000000;
                     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.02);
@@ -605,11 +600,10 @@ header {
             }
         }
         .single-contact-photo {
-            width: auto;
+            width: 50%;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             flex-direction: column;
-            margin-left: auto;
             .thumbnail-photo img {
                 width: 81px;
                 height: 71px;
@@ -617,7 +611,7 @@ header {
             }
             .arrows {
                 display: flex;
-                justify-content: center;
+                justify-content: flex-end;
                 align-items: center;
                 width: 100%;
                 cursor: pointer;
@@ -631,14 +625,16 @@ header {
         }
     }
     .single-photos-part-three {
-        width: 90vw;
+        width: 100%;
+        max-width: 1440px;
         height: auto;
         display: flex;
         flex-direction: column;
         margin: 0 auto;
-        p {
+        h3 {
             font-size: 18px;
             line-height: 27px;
+            font-weight: 400;
             letter-spacing: 0.1em;
             text-transform: uppercase;
             padding: 40px 0px 40px 0px;
@@ -646,14 +642,82 @@ header {
         .photos-apparentees {
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
             width: 100%;
             height: 500px;
-            gap: 2%;
             img {
-                width: 50%;
+                width: 49%;
                 height: auto;
                 object-fit: cover;
             }
         }
+    }
+}
+
+@media (max-width: 375px) {
+    .single-photos {
+        .single-photos-part-one {
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+                .photo-meta,
+                .photo-image {
+                    width: 100%;
+                }
+                .photo-meta {
+                    order: 2;
+                    padding-top: 10px;
+                }
+                .photo-image {
+                    order: 1;
+                    img {
+                        width: 265px;
+                        height: 397px;
+                    }
+                }
+        }
+        .single-photos-part-two {
+            width: 100%;
+            padding: 10px 0px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .single-photos-contact-button {
+                width: 263px;
+                display: flex;
+                flex-direction: column;
+                p {
+                    align-self: flex-start;
+                }
+                button {
+                    margin-top: 16px;
+                    width: 263px;
+                    height: 50px;
+                }
+            }
+            .single-contact-photo {
+                display: none;
+            }
+        }
+        .single-photos-part-three {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: auto;
+            h3 {
+                padding: 12px 0px 12px 0px;
+            }
+            .photos-apparentees {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                height: 580px;
+                img {
+                    width: 317px;
+                    height: 278px;
+                }
+            }
+        }   
     }
 }
