--- a/sass/theme.css
+++ b/sass/theme.css
@@ -237,15 +237,26 @@ header .navbar #closeBtn {
   }
 }
 @media (max-width: 375px) {
+  .footer_site_menu {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   #menu-footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 16px;
-    padding-top: 160px;
+    margin: 0;
+    padding: 0;
   }
   #menu-footer > li {
     padding-bottom: 25px;
+  }
+  #menu-footer #menu-item-52 {
+    padding-bottom: 0px;
   }
 }
 /*** BANNER ***/
@@ -607,20 +618,19 @@ header .navbar #closeBtn {
   padding: 40px 0px 40px 0px;
 }
 .single-photos .single-photos-part-three .photos-apparentees {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 2%;
   width: 100%;
   height: 500px;
 }
-.single-photos .single-photos-part-three .photos-apparentees img {
-  width: 49%;
-  height: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
 
 @media (max-width: 375px) {
+  .single-photos {
+    margin-bottom: 40px;
+  }
   .single-photos .single-photos-part-one {
     margin: 0 auto;
     display: flex;
@@ -678,9 +688,28 @@ header .navbar #closeBtn {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 580px;
+    height: auto;
+    gap: 20px;
   }
-  .single-photos .single-photos-part-three .photos-apparentees img {
+}
+/*** TEMPLATE PHOTO_BLOCK ***/
+#photo-block {
+  width: 50%;
+}
+#photo-block #photo-block__img {
+  width: 100%;
+  height: 495px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 375px) {
+  #photo-block {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  #photo-block #photo-block__img {
     width: 317px;
     height: 278px;
   }
