--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -291,14 +291,26 @@ header {
 }
 
 @media (max-width: 375px) {
+    .footer_site_menu {
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     #menu-footer {
         display: flex;
         flex-direction: column;
         align-items: center;
         font-size: 16px;
-        padding-top: 160px;
+        margin: 0;
+        padding: 0;
         > li {
             padding-bottom: 25px;
+        }
+        #menu-item-52 {
+            padding-bottom: 0px;
         }
     }
 }
@@ -673,22 +685,20 @@ header {
             padding: 40px 0px 40px 0px;
         }
         .photos-apparentees {
+            width: 100%;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
+            gap: 2%;
             width: 100%;
             height: 500px;
-            img {
-                width: 49%;
-                height: auto;
-                object-fit: cover;
-            }
         }
     }
 }
 
 @media (max-width: 375px) {
     .single-photos {
+        margin-bottom: 40px;
         .single-photos-part-one {
             margin: 0 auto;
             display: flex;
@@ -745,12 +755,31 @@ header {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 580px;
-                img {
-                    width: 317px;
-                    height: 278px;
-                }
+                height: auto;
+                gap: 20px;
             }
         }   
+    }
+}
+
+/*** TEMPLATE PHOTO_BLOCK ***/
+#photo-block {
+    width: 50%;
+        #photo-block__img {
+        width: 100%;
+        height: 495px;
+        object-fit: cover;
+        }
+}
+
+@media (max-width: 375px) {
+    #photo-block {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+            #photo-block__img {
+                width: 317px;
+                height: 278px;
+            }
     }
 }
