Correction apportée sur le responsive du header à 375px

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -43,7 +43,6 @@ $ddd : #E5E5E5;
 body {
     width: 100%;
     height: auto;
-    margin: 0px;
 }
 
 #wpadminbar {
@@ -685,7 +684,6 @@ header {
             padding: 40px 0px 40px 0px;
         }
         .photos-apparentees {
-            width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -696,7 +694,7 @@ header {
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1024px) {
     .single-photos {
         margin-bottom: 40px;
         .single-photos-part-one {
@@ -714,11 +712,33 @@ header {
                 .photo-image {
                     order: 1;
                     img {
-                        width: 265px;
-                        height: 397px;
+                        width: 100%;
+                        height: auto;
                     }
                 }
         }  
+        .single-photos-part-three {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            height: auto;
+            h3 {
+                padding: 12px 0px 12px 0px;
+            }
+            .photos-apparentees {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                height: auto;
+                gap: 20px;
+            }
+        }   
+    }
+}
+
+@media (max-width: 375px) {
+    .single-photos {
         .single-photos-part-two {
             width: 100%;
             padding: 10px 0px;
@@ -743,22 +763,6 @@ header {
                 display: none;
             }
         }
-        .single-photos-part-three {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: auto;
-            h3 {
-                padding: 12px 0px 12px 0px;
-            }
-            .photos-apparentees {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                height: auto;
-                gap: 20px;
-            }
-        }   
     }
 }
 
@@ -836,14 +840,15 @@ header {
     opacity: 1;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1024px) {
     #photo-block {
         width: 100%;
         display: flex;
         justify-content: center;
             #photo-block__img {
-                width: 317px;
-                height: 278px;
+                width: 100%;
+                height: auto;
+                margin: 0 20px;
             }
     }
 }
