--- a/sass/theme.css
+++ b/sass/theme.css
@@ -26,7 +26,6 @@
 body {
   width: 100%;
   height: auto;
-  margin: 0px;
 }
 
 #wpadminbar {
@@ -618,7 +617,6 @@ header .navbar #closeBtn {
   padding: 40px 0px 40px 0px;
 }
 .single-photos .single-photos-part-three .photos-apparentees {
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -627,7 +625,7 @@ header .navbar #closeBtn {
   height: 500px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1024px) {
   .single-photos {
     margin-bottom: 40px;
   }
@@ -648,9 +646,28 @@ header .navbar #closeBtn {
     order: 1;
   }
   .single-photos .single-photos-part-one .photo-image img {
-    width: 265px;
-    height: 397px;
+    width: 100%;
+    height: auto;
   }
+  .single-photos .single-photos-part-three {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+  .single-photos .single-photos-part-three h3 {
+    padding: 12px 0px 12px 0px;
+  }
+  .single-photos .single-photos-part-three .photos-apparentees {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    gap: 20px;
+  }
+}
+@media (max-width: 375px) {
   .single-photos .single-photos-part-two {
     width: 100%;
     padding: 10px 0px;
@@ -674,22 +691,6 @@ header .navbar #closeBtn {
   }
   .single-photos .single-photos-part-two .single-contact-photo {
     display: none;
-  }
-  .single-photos .single-photos-part-three {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-  }
-  .single-photos .single-photos-part-three h3 {
-    padding: 12px 0px 12px 0px;
-  }
-  .single-photos .single-photos-part-three .photos-apparentees {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-    gap: 20px;
   }
 }
 /*** TEMPLATE PHOTO_BLOCK ***/
@@ -764,14 +765,15 @@ header .navbar #closeBtn {
   opacity: 1;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1024px) {
   #photo-block {
     width: 100%;
     display: flex;
     justify-content: center;
   }
   #photo-block #photo-block__img {
-    width: 317px;
-    height: 278px;
+    width: 100%;
+    height: auto;
+    margin: 0 20px;
   }
 }/*# sourceMappingURL=theme.css.map */
